--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@types/axios": "^0.14.0",
     "@types/draft-js": "^0.11.18",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/jwt-decode": "^2.2.1"
+    "@types/jwt-decode": "^2.2.1",
+    "framer-motion": "^11.5.4"
   }
 }
