--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/socket.io-client": "^1.4.36",
     "axios": "^1.7.2",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
@@ -41,6 +42,8 @@
     "react-i18next": "^14.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.8.0",
     "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.11",
     "telegram-login-widget": "^0.1.12",
