--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@types/draft-js": "^0.11.18",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/jwt-decode": "^2.2.1",
-    "framer-motion": "^11.5.4"
+    "framer-motion": "^11.5.4",
+    "lodash": "^4.17.21"
   }
 }
