--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/socket.io-client": "^1.4.36",
-    "axios": "^1.7.2",
+    "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "canvas": "^2.11.2",
     "crypto-browserify": "^3.12.1",
@@ -98,10 +98,11 @@
     "@types/qrcode": "^1.5.5",
     "@types/react-virtualized": "^9.21.30",
     "@types/react-window": "^1.8.8",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^12.4.10",
     "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "react-virtualized": "^9.22.5",
-    "react-window": "^1.8.10"
+    "react-window": "^1.8.10",
+    "webpack": "^5.98.0"
   }
 }
