--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
+    "idb": "^8.0.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "os-browserify": "^0.3.0",
@@ -98,6 +99,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/react-virtualized": "^9.21.30",
     "@types/react-window": "^1.8.8",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.4.10",
     "gsap": "^3.12.5",
     "lodash": "^4.17.21",
