--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/engine": "^3.8.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.3",
@@ -103,8 +104,12 @@
     "framer-motion": "^12.4.10",
     "gsap": "^3.12.5",
     "lodash": "^4.17.21",
+    "react-particles": "^2.12.2",
+    "react-tsparticles": "^2.12.2",
     "react-virtualized": "^9.22.5",
     "react-window": "^1.8.10",
+    "tsparticles": "^3.8.1",
+    "tsparticles-engine": "^2.12.0",
     "webpack": "^5.98.0"
   }
 }
